# Genomics-of-Drug-Sensitivity-in-Cancer-GDSC-

./: .gitignore  README.md  pyproject.toml
api_example/: api_reader.py  readme.md
data/: gdsc_clean.csv
etl/: extract.py  load.py  main.py  transform.py  validate.py
notebooks/: EDA.ipynb  final_EDA.ipynb
parse_example/: data_parser.py  readme.md
scripts/: data_loader.py  write_to_db.py
